<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User">


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/img" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/mathimatician"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lesson"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/_96_650_561"
        android:textSize="25sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/Prices"
        android:layout_width="wrap_content"
        android:onClick="ConnectNow"
        android:layout_height="wrap_content"
        android:layout_below="@id/phonenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/prices"
        android:textSize="25sp"
        />


    <Button
        android:textColor="@color/purple_500"
        android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Prices"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Connect via Zoom Now!"
        android:textSize="18sp" />

</RelativeLayout>
    </layout>