<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Teacher's Profile"
        android:textSize="25sp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imageViewProfiles"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/img_2"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_image"/>

    <Button
        android:id="@+id/btnAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Image"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/editTextTeacherName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/teacher_s_name"/>

    <EditText
        android:id="@+id/editTextTeacherQualifications"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/qualifications"/>

    <!-- Add more EditText fields for other teacher information -->

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Profile"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <!-- Example of a registration button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="Register"/>

</LinearLayout>
