<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/img_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adamos"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/christodoulou" />

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:textSize="20dp"
            android:id="@+id/price"
            android:textColor="#046368"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_alignParentEnd="true"
            android:text="100$"/>

        <TextView
            android:layout_below="@+id/price"
            android:id="@+id/prices"
            android:textColor="#046368"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_alignParentEnd="true"
            android:text="@string/_100"/>




    </RelativeLayout>

</LinearLayout>